# Cxx20-modules-example

./: CMakeLists.txt  README.md  build.sh  main.cpp
modules/: sample.cpp  singleton.cpp
